--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   grouped_list: ^5.1.2
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
   flutter_chat_ui: ^1.6.10
   bubble: ^1.2.1
   persistent_bottom_nav_bar: ^5.0.2
@@ -41,6 +42,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.2.0
+  socket_io_client: ^2.0.3+1
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
