--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.2.0
   socket_io_client: ^2.0.3+1
   flutter_spinkit: ^5.2.0
+  speech_to_text: ^6.5.1
 
 dev_dependencies:
   flutter_test:
