--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
     ports:
-      - 127.0.0.1:8080:80
+      - 127.0.0.1:8082:80
     depends_on:
       - mariadb
     networks:
@@ -65,6 +65,8 @@ services:
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
+      - ME_CONFIG_BASICAUTH_USERNAME=root
+      - ME_CONFIG_BASICAUTH_PASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongodb
     depends_on:
       - mongodb
