--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,5 +1,5 @@
-name: mobile
-description: "A new Flutter project."
+name: frontend
+description: "Dr. Bot - Generic bot medical consulting mobile application for less-affluent individuals in need of medical services."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -45,6 +45,8 @@ dependencies:
   socket_io_client: ^2.0.3+1
   flutter_spinkit: ^5.2.0
   speech_to_text: ^6.5.1
+  intl: ^0.19.0
+  flutter_keyboard_visibility: ^6.0.0
 
 dev_dependencies:
   flutter_test:
