--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.2.0
-  socket_io_client: ^2.0.3+1
   flutter_spinkit: ^5.2.0
   speech_to_text: ^6.5.1
   intl: ^0.19.0
@@ -70,9 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
