--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   speech_to_text: ^6.5.1
   intl: ^0.19.0
   flutter_keyboard_visibility: ^6.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
