--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,19 +34,14 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
-  flutter_chat_ui: ^1.6.10
   bubble: ^1.2.1
-  persistent_bottom_nav_bar: ^5.0.2
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.2.0
   flutter_spinkit: ^5.2.0
-  speech_to_text: ^6.5.1
   intl: ^0.19.0
   flutter_keyboard_visibility: ^6.0.0
   shared_preferences: ^2.2.2
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
