--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   shared_preferences: ^2.2.2
   dio: ^5.4.1
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
