--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.2.2
   dio: ^5.4.1
   animated_text_kit: ^4.2.1
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
