--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^5.4.1
   animated_text_kit: ^4.2.1
   flutter_slidable: ^3.1.0
+  flutter_tts: ^4.0.1
 
 dev_dependencies:
   flutter_test:
